localization/v3.0.x/site/es/integrations/integrations_overview.md
---
id: integrations_overview.md
summary: >-
  Esta página proporciona una lista de tutoriales para que pueda interactuar con
  Milvus y herramientas de terceros.
title: Visión general de las integraciones
---
<h1 id="Integrations-Overview" class="common-anchor-header">Visión general de las integraciones<button data-href="#Integrations-Overview" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h1><p>Esta página proporciona una lista de tutoriales para que pueda interactuar con Milvus y herramientas de terceros.</p>
<table>
<thead>
<tr><th>Tutorial</th><th>Caso de uso</th><th>Socios o pilas</th></tr>
</thead>
<tbody>
<tr><td><a href="/docs/es/integrate_with_llamaindex.md">RAG con Milvus y LlamaIndex</a></td><td>RAG</td><td>Milvus, LLamaIndex</td></tr>
<tr><td><a href="/docs/es/integrate_with_langchain.md">RAG con Milvus y LangChain</a></td><td>RAG</td><td>Milvus, LangChain</td></tr>
<tr><td><a href="/docs/es/milvus_hybrid_search_retriever.md">Recuperador de búsqueda híbrido Milvus en LangChain</a></td><td>Búsqueda híbrida</td><td>Milvus, LangChain</td></tr>
<tr><td><a href="/docs/es/basic_usage_langchain.md">Utilizar Milvus como almacén de vectores en LangChain</a></td><td>Búsqueda semántica</td><td>Milvus, LangChain</td></tr>
<tr><td><a href="/docs/es/full_text_search_with_langchain.md">Uso de la búsqueda de texto completo con LangChain y Milvus</a></td><td>Búsqueda de texto completo</td><td>Milvus, LangChain</td></tr>
<tr><td><a href="/docs/es/integrate_with_haystack.md">RAG con Milvus y Haystack</a></td><td>RAG</td><td>Milvus, Haystack</td></tr>
<tr><td><a href="/docs/es/llamaindex_milvus_async.md">RAG con Milvus y LlamaIndex Async API</a></td><td>Ochestration</td><td>Milvus, LlamaIndex</td></tr>
<tr><td><a href="/docs/es/milvus_rag_with_vllm.md">Creación de RAG con Milvus, vLLM y Llama 3.1</a></td><td>RAG</td><td>Milvus, vLLM, LlamaIndex</td></tr>
<tr><td><a href="/docs/es/llamaindex_milvus_full_text_search.md">Uso de la búsqueda de texto completo con LlamaIndex y Milvus</a></td><td>Búsqueda de texto completo</td><td>Milvus, LlamaIndex</td></tr>
<tr><td><a href="/docs/es/dify_with_milvus.md">Despliegue de Dify con Milvus</a></td><td>Organización</td><td>Milvus, Dify</td></tr>
<tr><td><a href="/docs/es/rag_with_langflow.md">Creación de un sistema RAG utilizando Langflow con Milvus</a></td><td>Ochestration</td><td>Milvus, Langflow</td></tr>
<tr><td><a href="/docs/es/use_milvus_in_private_gpt.md">Uso de Milvus en PrivateGPT</a></td><td>Ochestration</td><td>Búsqueda vectorial</td></tr>
<tr><td><a href="/docs/es/use_milvus_in_docsgpt.md">Uso de Milvus en DocsGPT</a></td><td>Ochestration</td><td>DocsGPT, Milvus</td></tr>
<tr><td><a href="/docs/es/use_milvus_with_sambanova.md">Utilizar Milvus con SambaNova</a></td><td>Orquestación</td><td>Milvus, SambaNova</td></tr>
<tr><td><a href="/docs/es/milvus_rag_with_dynamiq.md">Primeros pasos con Dynamiq y Milvus</a></td><td>Orquestación</td><td>Milvus, Dynamiq</td></tr>
<tr><td><a href="/docs/es/llama_stack_with_milvus.md">Construir RAG con Llama Stack con Milvus</a></td><td>Orquestación</td><td>Milvus, Llama Stack</td></tr>
<tr><td><a href="/docs/es/integrate_with_memgpt.md">Agente Chatbot con Milvus y MemGPT</a></td><td>Agente</td><td>Milvus, MemGPT</td></tr>
<tr><td><a href="/docs/es/llama_agents_metadata.md">Sistemas multiagente con Mistral AI, Milvus y Llama-agents</a></td><td>Agente</td><td>Milvus, Mistral AI, LlamaIndex</td></tr>
<tr><td><a href="/docs/es/quickstart_mem0_with_milvus.md">Primeros pasos con Mem0 y Milvus</a></td><td>Agentes</td><td>Mem0, Milvus</td></tr>
<tr><td><a href="/docs/es/integrate_with_agno.md">Integrar Milvus con Agno</a></td><td>Agentes</td><td>Milvus, Agno</td></tr>
<tr><td><a href="/docs/es/milvus_and_mcp.md">MCP + Milvus: Conectar la IA con bases de datos vectoriales</a></td><td>Agentes</td><td>Milvus, MCP</td></tr>
<tr><td><a href="/docs/es/openai_agents_milvus.md">Integración de Milvus con agentes OpenAI: Guía paso a paso</a></td><td>Agentes</td><td>Milvus, OpenAI</td></tr>
<tr><td><a href="/docs/es/integrate_with_ragas.md">Evaluación RAG con Ragas y Milvus</a></td><td>Evaluación</td><td>Milvus, Ragas</td></tr>
<tr><td><a href="/docs/es/evaluation_with_deepeval.md">Evaluación con DeepEval</a></td><td>Evaluación y observabilidad</td><td>Milvus, DeepEval</td></tr>
<tr><td><a href="/docs/es/evaluation_with_phoenix.md">Evaluación con Arize Pheonix</a></td><td>Evaluación y observabilidad</td><td>Milvus, Arize Pheonix</td></tr>
<tr><td><a href="/docs/es/integrate_with_langfuse.md">Milvus en Langfuse</a></td><td>Observabilidad</td><td>Milvus, Langfuse</td></tr>
<tr><td><a href="/docs/es/integrate_with_openai.md">Búsqueda semántica con Milvus y OpenAI</a></td><td>Búsqueda semántica</td><td>Milvus, OpenAI</td></tr>
<tr><td><a href="/docs/es/integrate_with_cohere.md">Respuesta a preguntas con Milvus y Cohere</a></td><td>Búsqueda semántica</td><td>Milvus, Cohere</td></tr>
<tr><td><a href="/docs/es/integrate_with_hugging-face.md">Respuesta a preguntas con Milvus y HuggingFace</a></td><td>Respuesta a preguntas</td><td>Milvus, HuggingFace</td></tr>
<tr><td><a href="/docs/es/integrate_with_pytorch.md">Búsqueda de imágenes con Milvus y Pytorch</a></td><td>Búsqueda semántica</td><td>Milvus, Pytorch</td></tr>
<tr><td><a href="/docs/es/integrate_with_sentencetransformers.md">Búsqueda de películas con Milvus y SentenceTransfromers</a></td><td>Búsqueda semántica</td><td>Milvus y SentenceTransformers</td></tr>
<tr><td><a href="/docs/es/integrate_with_voxel51.md">Realización de búsquedas visuales con Milvus y FiftyOne</a></td><td>Búsqueda semántica</td><td>Milvus, FiftyOne</td></tr>
<tr><td><a href="/docs/es/integrate_with_voyageai.md">Búsqueda semántica con Milvus y VoyageAI</a></td><td>Búsqueda semántica</td><td>Milvus, VoyageAI</td></tr>
<tr><td><a href="/docs/es/integrate_with_bentoml.md">RAG con Milvus y BentoML</a></td><td>RAG</td><td>Milvus, BentoML</td></tr>
<tr><td><a href="/docs/es/integrate_with_dspy.md">RAG con Milvus y DSPy</a></td><td>RAG</td><td>Milvus, DSPy</td></tr>
<tr><td><a href="/docs/es/integrate_with_jina.md">Búsqueda semántica con Milvus y Jina</a></td><td>Búsqueda semántica</td><td>Milvus, Jina</td></tr>
<tr><td><a href="/docs/es/integrate_with_snowpark.md">Milvus en Snowpark Container Services</a></td><td>Conexión de datos</td><td>Milvus, Snowpark</td></tr>
<tr><td><a href="/docs/es/integrate_with_whyhow.md">Recuperación basada en reglas con Milvus y WhyHow</a></td><td>Respuesta a preguntas</td><td>Milvus, WhyHow</td></tr>
<tr><td><a href="/docs/es/integrate_with_fastgpt.md">Cómo desplegar FastGPT con Milvus</a></td><td>RAG</td><td>Milvus, FastGPT</td></tr>
<tr><td><a href="/docs/es/integrate_with_vanna.md">Escribir SQL con Vanna y Milvus</a></td><td>RAG</td><td>Milvus, Vanna</td></tr>
<tr><td><a href="/docs/es/integrate_with_camel.md">RAG con Milvus y Camel</a></td><td>RAG</td><td>Milvus, Camel</td></tr>
<tr><td><a href="/docs/es/integrate_with_airbyte.md">Airbyte y Milvus: infraestructura de movimiento de datos de código abierto</a></td><td>Conexión de datos</td><td>Milvus, Airbyte</td></tr>
<tr><td><a href="/docs/es/video_search_with_twelvelabs_and_milvus.md">Búsqueda avanzada de vídeo: Aprovechamiento de Twelve Labs y Milvus para la recuperación semántica</a></td><td>Búsqueda semántica</td><td>Milvus, Twelve Labs</td></tr>
<tr><td><a href="/docs/es/kafka-connect-milvus.md">Conectar Kafka con Milvus</a></td><td>Fuentes de datos</td><td>Milvus, Kafka</td></tr>
<tr><td><a href="/docs/es/kotaemon_with_milvus.md">Kotaemon RAG con Milvus</a></td><td>RAG</td><td>Milvus, Kotaemon</td></tr>
<tr><td><a href="/docs/es/apify_milvus_rag.md">Generación mejorada de recuperación: Rastreo de sitios web con Apify y almacenamiento de datos en Milvus para la respuesta a preguntas</a></td><td>Fuentes de datos</td><td>Milvus, Apify</td></tr>
<tr><td><a href="/docs/es/build_rag_on_arm.md">Construcción de RAG en arquitectura Arm</a></td><td>RAG</td><td>Milvus, Arm</td></tr>
<tr><td><a href="/docs/es/build_RAG_with_milvus_and_fireworks.md">Construir RAG con Milvus y Fireworks AI</a></td><td>LLMs</td><td>Milvus, Fireworks AI</td></tr>
<tr><td><a href="/docs/es/build_RAG_with_milvus_and_lepton.md">Construir GAR con Milvus y Lepton AI</a></td><td>LLMs</td><td>Milvus, Lepton AI</td></tr>
<tr><td><a href="/docs/es/build_RAG_with_milvus_and_siliconflow.md">Construir GAR con Milvus y SiliconFlow</a></td><td>LLMs</td><td>Milvus, SiliconFlow</td></tr>
<tr><td><a href="/docs/es/rag_with_milvus_and_unstructured.md">Construir un GAR con Milvus y fuentes de datos</a></td><td>de datos no estructurados</td><td>Milvus, no estructurados</td></tr>
<tr><td><a href="/docs/es/RAG_with_pii_and_milvus.md">Construir un GAR con Milvus + PII Masker</a></td><td>Fuentes de datos</td><td>Milvus, Enmascarador PII</td></tr>
<tr><td><a href="/docs/es/knowledge_table_with_milvus.md">Tabla de conocimientos con Milvus</a></td><td>Ingeniería del conocimiento</td><td>Tabla de conocimientos, Milvus</td></tr>
<tr><td><a href="/docs/es/build_RAG_with_milvus_and_cognee.md">Construir RAG con Milvus y Cognee</a></td><td>Ingeniería del conocimiento</td><td>Milvus, Cognee</td></tr>
<tr><td><a href="/docs/es/build_RAG_with_milvus_and_gemini.md">Construir RAG con Milvus y Gemini</a></td><td>LLMs</td><td>Milvus, Gemini</td></tr>
<tr><td><a href="/docs/es/build_RAG_with_milvus_and_ollama.md">Construir RAG con Milvus y Ollama</a></td><td>LLMs</td><td>Milvus, Ollama</td></tr>
<tr><td><a href="/docs/es/build_RAG_with_milvus_and_deepseek.md">Construir GAR con Milvus y DeepSeek</a></td><td>LLMs</td><td>Milvus, DeepSeek</td></tr>
<tr><td><a href="/docs/es/build_RAG_with_milvus_and_crawl4ai.md">Creación del GAR con Milvus y Crawl4AI</a></td><td>Fuentes de datos</td><td>Milvus, Crawl4AI</td></tr>
<tr><td><a href="/docs/es/build_RAG_with_milvus_and_firecrawl.md">Creación de RAG con Milvus y Firecrawl</a></td><td>Fuentes de datos</td><td>Milvus, Firecrawl</td></tr>
<tr><td><a href="/docs/es/integration_with_mindsdb.md">Integración de Milvus con MindsDB</a></td><td>Ingeniería del conocimiento</td><td>Milvus, MindsDB</td></tr>
<tr><td><a href="/docs/es/build_RAG_with_milvus_and_feast.md">Construir RAG con Milvus y Feast</a></td><td>Fuentes de datos</td><td>Milvus, Feast</td></tr>
<tr><td><a href="/docs/es/build_RAG_with_milvus_and_docling.md">Construir RAG con Milvus y Docling</a></td><td>Fuentes de datos</td><td>Milvus, Docling</td></tr>
<tr><td><a href="/docs/es/build_RAG_with_milvus_and_embedAnything.md">Construir RAG con Milvus y EmbedAnything</a></td><td>Incorporación de</td><td>Milvus, EmbedAnything</td></tr>
<tr><td><a href="/docs/es/milvus_and_n8n.md">Primeros pasos con Milvus y n8n</a></td><td>Orquestación</td><td>Milvus, n8n</td></tr>
<tr><td><a href="/docs/es/use_milvus_in_anythingllm.md">Uso de Milvus en AnythingLLM</a></td><td>Orquestación</td><td>Milvus, AnythingLLM</td></tr>
<tr><td><a href="/docs/es/NLWeb_with_milvus.md">Uso de NLWeb con Milvus</a></td><td>Fuentes de datos</td><td>Milvus, NLWeb</td></tr>
<tr><td><a href="/docs/es/langextract_milvus_demo.md">Integración de LangExtract + Milvus</a></td><td>Fuentes de datos</td><td>Milvus, LangExtract</td></tr>
<tr><td><a href="https://colab.research.google.com/drive/1bONndT8MIxJZzzV4QTpQfU-eyWdL1Q1m?usp=sharing">Búsqueda semántica con ZeroEntropy y Milvus</a></td><td>Búsqueda semántica</td><td>Milvus, ZeroEntropy</td></tr>
<tr><td><a href="/docs/es/langchain_milvus_dido.md">Integración de la función de incrustación de texto de Milvus con LangChain</a></td><td>Incrustación de texto</td><td>Milvus, LangChain</td></tr>
<tr><td>[Creación de un agente RAG de doble fuente con Exa y Milvus]</td><td>Fuentes de datos</td><td>Milvus, Exa</td></tr>
</tbody>
</table>
